# gene

./: .gitignore  CMakeLists.txt  README.md  bench_variable.sh  benchmark.json  build.sh  ex.txt  example.txt  gene  gene_config.cfg  gmon.out  install.sh  note.org  parse.sh  parser  run.sh  runbenchmark.sh  runtest.sh
.github/workflow/: cmake.yml  gene_actions.yml
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  bench.cpp  bench_complexity.cpp  bench_lgn_size.cpp  bench_lgn_size_single_tile.cpp  bench_size__lgn1_ts_5.cpp  bench_writer.cpp
expreriments/: README.md
expreriments/generic/: simple_test.cpp
expreriments/prototipo_v/: Makefile
expreriments/py_generator/: data.json  extract_gen.py
expreriments/set_ver/: set_gene.cpp
expreriments/vector_ver/: a.out
prototipo_v/: tiler  tiler.cpp
py_generator/: extract_gen.py  gene_work_generator.py  note.txt
set_ver/: README.md  err_set_shuffle.txt  unordered_set_gene.cpp
src/: CMakeLists.txt  algorithm_pcim.cpp  algorithm_pcim.hpp  gene_algo.cpp  gene_algo.hpp  main.cpp  vector_pcim.cpp  vector_pcim.hpp
src/computation/: .#vector_random_pcim.hpp  CMakeLists.txt  algorithm_pcim.cpp  algorithm_pcim.hpp  set_pcim.hpp  vector_extract_pcim.cpp  vector_extract_pcim.hpp  vector_pcim.cpp  vector_pcim.hpp  vector_random_pcim.cpp  vector_random_pcim.hpp  writer.cpp  writer.hpp
src/parsing/: .#parse.hpp  CMakeLists.txt  parse.cpp  parse.hpp
test/: .#gene_algo_test.cc  CMakeLists.txt  gene_algo_test.cc  hello_test.cc
vector_ver/: gene.cpp
